@@ -1,22 +1,24 @@
 package io.github.ngtrphuc.smartphone_shop.controller;
+
+import java.util.Comparator;
 import java.util.List;
 import java.util.regex.PatternSyntaxException;
-import java.util.stream.Collectors;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
+
 import io.github.ngtrphuc.smartphone_shop.model.Product;
 import io.github.ngtrphuc.smartphone_shop.repository.ProductRepository;
+
 @Controller
 public class MainController {
+
     private static final int PAGE_SIZE = 8;
     private final ProductRepository productRepository;
+
     public MainController(ProductRepository productRepository) {
         this.productRepository = productRepository;
     }
@@ -48,16 +50,25 @@ public class MainController {
             }
         }
 
-        Pageable pageable = buildPageable(sort, page);
-        Page<Product> productPage = productRepository.findWithFilters(
-                blankToNull(keyword), resolvedPriceMin, resolvedPriceMax, pageable);
+        List<Product> all = productRepository.findAllWithFilters(
+                blankToNull(keyword), resolvedPriceMin, resolvedPriceMax);
 
-        List<Product> products = applyStringFilters(
-                productPage.getContent(), batteryRange, batteryMin, batteryMax, screenSize);
+        all = applySortInMemory(all, sort);
+        all = applyStringFilters(all, batteryRange, batteryMin, batteryMax, screenSize);
+
+        int totalElements = all.size();
+        int totalPages = totalElements == 0 ? 1 : (int) Math.ceil((double) totalElements / PAGE_SIZE);
+        int safePage = Math.max(0, Math.min(page, totalPages - 1));
+
+        List<Product> products = all.stream()
+                .skip((long) safePage * PAGE_SIZE)
+                .limit(PAGE_SIZE)
+                .toList();
+
         model.addAttribute("products", products);
-        model.addAttribute("currentPage", page);
-        model.addAttribute("totalPages", productPage.getTotalPages());
-        model.addAttribute("totalElements", productPage.getTotalElements());
+        model.addAttribute("currentPage", safePage);
+        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("totalElements", (long) totalElements);
         model.addAttribute("keyword", keyword);
         model.addAttribute("sort", sort);
         model.addAttribute("priceRange", priceRange);
@@ -67,7 +78,6 @@ public class MainController {
         model.addAttribute("batteryMin", batteryMin);
         model.addAttribute("batteryMax", batteryMax);
         model.addAttribute("screenSize", screenSize);
-        addCommonAttributes(model);
         return "index";
     }
 
@@ -77,38 +87,63 @@ public class MainController {
         Product product = productRepository.findById(id).orElse(null);
         if (product == null) return "redirect:/";
         model.addAttribute("product", product);
-        addCommonAttributes(model);
         return "detail";
     }
 
-    private Pageable buildPageable(String sort, int page) {
-        Sort s = switch (sort != null ? sort : "") {
-            case "name_asc"   -> Sort.by("name").ascending();
-            case "name_desc"  -> Sort.by("name").descending();
-            case "price_asc"  -> Sort.by("price").ascending();
-            case "price_desc" -> Sort.by("price").descending();
-            default           -> Sort.by("id").ascending();
+    private List<Product> applySortInMemory(List<Product> products, String sort) {
+        if (sort == null) return products;
+        return switch (sort) {
+            case "name_asc" -> products.stream()
+                    .sorted((a, b) -> {
+                        String na = a.getName() != null ? a.getName() : "";
+                        String nb = b.getName() != null ? b.getName() : "";
+                        return na.compareToIgnoreCase(nb);
+                    }).toList();
+            case "name_desc" -> products.stream()
+                    .sorted((a, b) -> {
+                        String na = a.getName() != null ? a.getName() : "";
+                        String nb = b.getName() != null ? b.getName() : "";
+                        return nb.compareToIgnoreCase(na);
+                    }).toList();
+            case "price_asc" -> products.stream()
+                    .sorted(Comparator.comparingDouble(
+                            p -> p.getPrice() != null ? p.getPrice() : 0.0))
+                    .toList();
+            case "price_desc" -> products.stream()
+                    .sorted(Comparator.comparingDouble(
+                            (Product p) -> p.getPrice() != null ? p.getPrice() : 0.0).reversed())
+                    .toList();
+            default -> products;
         };
-        return PageRequest.of(Math.max(page, 0), PAGE_SIZE, s);
     }
 
     private List<Product> applyStringFilters(List<Product> products,
             String batteryRange, Integer batteryMin, Integer batteryMax, String screenSize) {
         if (batteryRange != null && !batteryRange.isBlank()) {
             products = switch (batteryRange) {
-                case "under5000" -> products.stream().filter(p -> parseBattery(p.getBattery()) < 5000).collect(Collectors.toList());
-                case "over5000"  -> products.stream().filter(p -> parseBattery(p.getBattery()) >= 5000).collect(Collectors.toList());
+                case "under5000" -> products.stream()
+                        .filter(p -> parseBattery(p.getBattery()) < 5000).toList();
+                case "over5000" -> products.stream()
+                        .filter(p -> parseBattery(p.getBattery()) >= 5000).toList();
                 default -> products;
             };
         }
-        if (batteryMin != null) products = products.stream().filter(p -> parseBattery(p.getBattery()) >= batteryMin).collect(Collectors.toList());
-        if (batteryMax != null) products = products.stream().filter(p -> parseBattery(p.getBattery()) <= batteryMax).collect(Collectors.toList());
-
+        if (batteryMin != null) {
+            products = products.stream()
+                    .filter(p -> parseBattery(p.getBattery()) >= batteryMin).toList();
+        }
+        if (batteryMax != null) {
+            products = products.stream()
+                    .filter(p -> parseBattery(p.getBattery()) <= batteryMax).toList();
+        }
         if (screenSize != null && !screenSize.isBlank()) {
             products = switch (screenSize) {
-                case "under6.5" -> products.stream().filter(p -> parseScreen(p.getSize()) < 6.5).collect(Collectors.toList());
-                case "6.5to6.8" -> products.stream().filter(p -> { double s = parseScreen(p.getSize()); return s >= 6.5 && s <= 6.8; }).collect(Collectors.toList());
-                case "over6.8"  -> products.stream().filter(p -> parseScreen(p.getSize()) > 6.8).collect(Collectors.toList());
+                case "under6.5" -> products.stream()
+                        .filter(p -> parseScreen(p.getSize()) < 6.5).toList();
+                case "6.5to6.8" -> products.stream()
+                        .filter(p -> { double s = parseScreen(p.getSize()); return s >= 6.5 && s <= 6.8; }).toList();
+                case "over6.8" -> products.stream()
+                        .filter(p -> parseScreen(p.getSize()) > 6.8).toList();
                 default -> products;
             };
         }
@@ -118,6 +153,7 @@ public class MainController {
     private Double resolveMin(Double existing, Double fallback) { return existing != null ? existing : fallback; }
     private Double resolveMax(Double existing, Double fallback) { return existing != null ? existing : fallback; }
     private String blankToNull(String s) { return (s == null || s.isBlank()) ? null : s; }
+
     private int parseBattery(String battery) {
         if (battery == null) return 0;
         try { return Integer.parseInt(battery.replaceAll("[^0-9]", "")); }
@@ -128,10 +164,5 @@ public class MainController {
         if (size == null) return 0;
         try { return Double.parseDouble(size.replaceAll("[^0-9.]", "")); }
         catch (NumberFormatException | PatternSyntaxException e) { return 0; }
-    }
-
-    private void addCommonAttributes(Model model) {
-        model.addAttribute("shopname", "Smartphone Shop");
-        model.addAttribute("address", "Asaka, Saitama, Japan");
     }
 }
